# fractal-apollo

./: .gitignore  README.md  generate_cropset.py  main.py  pyproject.toml  scratch_stats.py  yolo_analyzer.py
benchmarks/: generate_data.py  run_benchmark.py  run_coco.py
dataset_checker/: coco_converter.py  config.py  data_loader.py  metrics_engine.py  visualizer.py
